<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:background="#ccc"
    android:backgroundTint="#ccc"
    app:cardBackgroundColor="#ccc"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#D3D1D1"
      android:forceHasOverlappingRendering="true"
      android:foregroundGravity="center">

        <TextView
          android:id="@+id/regView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/regNum"
          android:textColor="#455A64"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/ownerView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/owner"
          android:textColor="#455A64"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/regView"
          app:layout_constraintHorizontal_bias="0.511"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/usedView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/used"
          android:textColor="#455A64"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.527"
          app:layout_constraintStart_toEndOf="@+id/regView"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/modelView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="28dp"
          android:text="@string/model"
          android:textColor="#455A64"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/regView"
          app:layout_constraintVertical_bias="1.0" />

        <TextView
          android:id="@+id/markView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="44dp"
          android:layout_marginEnd="60dp"
          android:text="@string/mark"
          android:textColor="#455A64"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/modelView"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ownerView" />

        <TextView
          android:id="@+id/fuelView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="72dp"
          android:layout_marginTop="28dp"
          android:text="@string/fuel"
          android:textColor="#455A64"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toEndOf="@+id/modelView"
          app:layout_constraintTop_toBottomOf="@+id/usedView"
          app:layout_constraintVertical_bias="0.941" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
