<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      android:background="#ccc"
      android:backgroundTint="#ccc"
      app:cardBackgroundColor="#ccc"
      app:cardCornerRadius="10dp"
      app:cardPreventCornerOverlap="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="#D3D1D1"
          android:forceHasOverlappingRendering="true"
          android:foregroundGravity="center">

            <TextView
              android:id="@+id/regView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="164dp"
              android:layout_marginTop="4dp"
              android:text="@string/regNum"
              android:textColor="#455A64"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

            <TextView
              android:id="@+id/ownerView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="60dp"
              android:layout_marginTop="4dp"
              android:text="@string/owner"
              android:textColor="#455A64"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

            <TextView
              android:id="@+id/usedView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="308dp"
              android:layout_marginTop="4dp"
              android:text="@string/used"
              android:textColor="#455A64"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>